# accessing-the-future

./: .gitignore  .zenodo.json  CITATION.cff  Makefile  README.md  au_housing_disability_monte_carlo.py  methods.md  pyproject.toml  requirements.lock.txt  run_from_excel.py
.github/workflows/: ci.yml
configs/: annual_interpolated.yaml  baseline.yaml  bracket_boundary.yaml  cost_analysis.yaml  derivation.yaml  smoke.yaml
data/: README.md  checksums.sha256  provenance.md
data/processed/: construction_index.csv  dwelling_mix.csv  model_inputs.csv
data/raw/: 6427017.xlsx  SDACDC01.xlsx  historical_any_dis.csv  sdac22_household_disability.xlsx
docs/: cost_analysis.md  release.md
inputs/: Data for modelling.xlsx
reports/: README.md
scripts/: __init__.py  build_construction_index.py  build_dwelling_mix.py  build_model_inputs.py  check_release.py  first_occupancy_analysis.py  generate_reports.py  manuscript_figures.py  pipeline_utils.py  retrofit_cost_analysis.py  retrofit_cost_comparison.py  trend_schedule_table.py  trend_tables.py  validate_inputs.py  verify_data.py
tests/: test_build_construction_index.py  test_build_dwelling_mix.py  test_build_model_inputs.py  test_engine_profiles.py  test_first_occupancy.py  test_first_occupancy_cdf.py  test_manifests.py  test_pipeline_regression.py  test_release_check.py  test_reports.py  test_retrofit_cost_analysis.py  test_runtime_config.py  test_survey_history.py  test_transition_model.py  test_trend_schedule.py  test_trend_tables.py  test_validate_inputs.py  test_verify_data.py
(+3 files in other folders)
