[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "accessing-the-future"
version = "0.1.0"
description = "Reproducible Monte Carlo housing accessibility research workflow"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "numpy==2.3.5",
  "pandas==2.3.3",
  "openpyxl==3.1.5",
  "PyYAML==6.0.3",
  "matplotlib==3.10.8",
  "pytest==9.0.2",
]

[tool.setuptools]
py-modules = ["au_housing_disability_monte_carlo", "run_from_excel"]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
